syntax = "proto3";

package com.road.yishi.proto.active;

message RewardInfo {
  int32 days = 1;
  string item = 2;
}
