syntax = "proto3";

package com.road.yishi.proto.quest;

message QuestInfo {
  int32 templateId = 1;
  bool isComplete = 2;
  int32 condition_1 = 3;
  int32 condition_2 = 4;
  int32 condition_3 = 5;
  int32 condition_4 = 6;
  string completedDate = 7;
  int32 repeatFinish = 8;
  bool isAccept = 9;
  bool isSelect = 10;
  string addDate = 11;
}
