syntax = "proto3";

package com.road.yishi.proto.reward;

message RewardFreshReqMsg {
  bool isButton = 1;
  int32 payType = 2;
}
