syntax = "proto3";

package com.road.yishi.proto.reward;

message RewardRemovedMsg {
  int32 templateId = 1;
}
