syntax = "proto3";

package com.road.yishi.proto.vip;

message VipItemInfoMsg {
  int32 tempId = 1;
  int32 count = 2;
}
